# openlegion

./: .env.example  .gitignore  .openlegion_history  .venv  CLA.md  CLAUDE.md  COMMERCIAL.md  CONTRIBUTING.md  Dockerfile.agent  Dockerfile.browser  Dockerfile.mesh  LICENSE  Makefile  NOTICE  PROJECT.md  PROVIDERS.md  QUICKSTART.md  README.md  ROADMAP.md  TRADEMARK.md  benchmark.py  docker-compose.yml  install.ps1  install.sh  pyproject.toml
.github/workflows/: browser-image.yml  test.yml
agent_tools/: README.md
config/: mesh.yaml  network.yaml  permissions.json
config/workflows/: prospect_pipeline.yaml  research_only.yaml
docker/: browser-entrypoint.sh  fontconfig-windows-aliases.conf
docs/: README.md  agent-tools.md  architecture.md  channels.md  configuration.md  dashboard.md  development.md  mcp.md  memory.md  security-audit-2026-05-29.md  security-remediation-review-2026-05-29.md  security.md  triggering.md  workflows.md
docs/internal/: README.md  session-observability.md
docs/plans/: 2026-03-09-dashboard-ux-improvements.md  2026-03-16-wallet-signing-service.md  2026-05-02-operator-orchestration-roadmap.md  2026-05-08-blackboard-multitenant-design.md  2026-05-31-tools-skills-rename-and-skill-packs.md  2026-06-04-integrations-oauth-strategy.md  2026-06-04-oauth-integrations-connect-flow.md  (+11 more)
skills/: README.md
src/: cli.py  marketplace.py  setup_wizard.py
tests/: conftest.py  manual_smoke_test.py  test_account_warmup.py  test_agent_bearer_auth.py  test_agent_export.py  test_agent_files_paging.py  test_agent_goals_endpoint.py  test_agent_registration.py  test_agent_server.py  test_antibot_task_types.py  test_api_endpoints.py  test_api_keys.py  test_archive_health_dereg.py  test_artifact_ingest.py  test_ask_teammate.py  test_ask_thread_post_review_fix.py  test_attachments.py  test_auto_merge.py  test_auto_resume.py  test_back_edge_helper.py  test_behavior_analyze.py  test_binding_cookie_coherence.py  test_blackboard_observability.py  test_body_size_limit.py  test_boot_archived_skip.py  test_browser_canary.py  test_browser_captcha_redetect.py  test_browser_click_xy.py  test_browser_delegation.py  test_browser_device_profile.py  test_browser_download_mesh.py  test_browser_file_transfer.py  test_browser_fill_form.py  test_browser_flags.py  test_browser_inspect_requests.py  test_browser_login_cancel.py  test_browser_max_concurrent_autodetect.py  test_browser_metrics.py  test_browser_metrics_ingest.py  test_browser_nav_probe.py  (+227 more)
tools/: behavior_analyze.py  behavior_baseline.jsonl
(+201 files in other folders)
