[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openlegion"
version = "0.1.0"
description = "A lean, container-isolated, memory-aware multi-agent runtime"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "litellm>=1.60.0,<1.82.7",
    "anthropic>=0.80.0",
    "sqlite-vec>=0.1.6",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "docker>=7.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=13.0",
    "pypdf>=4.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5",
    "ruff>=0.8.0",
]

mcp = [
    "mcp>=1.0",
]

channels = [
    "python-telegram-bot>=22.0",
    "discord.py>=2.0",
    "slack-bolt>=1.18",
]

wallet = [
    "web3>=7.0,<8.0",
    "eth-account>=0.13,<1.0",
    "mnemonic>=0.21",
    "solders>=0.21,<1.0",
    "solana>=0.34,<1.0",
]

[project.scripts]
openlegion = "src.cli:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"src.dashboard" = ["templates/**/*", "static/**/*"]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
